fixed chrome not showing name svg

--- a/_sass/landing.sass
+++ b/_sass/landing.sass
@@ -31,9 +31,13 @@
   .logo
     padding-top: 7vh
     max-height: 300px
+    flex-basis: 300px
     align-self: stretch
     display: flex
     justify-content: center
+
+    svg
+      height: 100%
 
   a
     // margin-top: 55vh
